--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,4 @@
-baseURL: http://example.org/
+baseURL: https://webmin.dev/
 languageCode: en-us
-title: My New Hugo Site
+title: Webmin
+theme: PaperMod
