--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://webmin.dev/
+baseURL: https://webmin.dev/9283yuihslskjlgfkhu4y5/
 languageCode: en-us
 title: Webmin
 theme: PaperMod
