Update `.htaccess` for old About and Intro pages

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,1 +1,7 @@
+# Changelog should be displayed as archives
 RewriteRule ^changelog/$ archives/ [L]
+
+# About and intro
+RewriteRule ^intro.html$ about/ [R,301]
+RewriteRule ^about.html$ about-jamie/ [R,301]
+
