Fix site URL to /

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://webmin.dev/devel-2023-01-13-take4/
+baseURL: https://webmin.dev/
 languageCode: en-us
 title: Webmin
 theme: PaperMod
