Add Supported Systems integration and rewrites to avoid broken links

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -7,3 +7,6 @@ RewriteRule ^about.html$ about-jamie/ [R,301]
 
 # Devel
 RewriteRule ^devel.html$ download/#development-builds [R,301]
+
+# Supported OS
+RewriteRule ^support.md$ about/#supported-os [R,301]
