--- a/static/.htaccess
+++ b/static/.htaccess
@@ -10,3 +10,10 @@ RewriteRule ^devel.html$ download/#development-builds [R,301]
 
 # Supported OS
 RewriteRule ^support.html$ about/#supported-os [R,301]
+
+# Screenshots redirecs
+RewriteRule ^demo.html$ screenshots/ [R,301]
+RewriteRule ^screens/ screenshots/ [R,301]
+
+# Standard Modules
+RewriteRule ^standard.html$ download/#standard-modules [R,301]
