Fix to link Webmin Updates to download/#standard-modules

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -17,3 +17,4 @@ RewriteRule ^screens/ screenshots/ [R,301]
 
 # Standard Modules
 RewriteRule ^standard.html$ download/#standard-modules [R,301]
+RewriteRule ^updates.html$ download/#standard-modules [R,301]
