--- a/config.yml
+++ b/config.yml
@@ -29,6 +29,10 @@ menu:
       name: ' '
       url: /search/
       weight: 60
+    - identifier: hmenu
+      name: ' '
+      url: /hmenu/
+      weight: 70
 
 minify:
   minifyOutput: true
