Clear Download related pages and rewrites

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -23,6 +23,13 @@ RewriteRule ^screens/(.*)$ https://%{HTTP_HOST}/screenshots/ [R=301]
 # Standard Modules
 RewriteRule ^standard.html$ https://%{HTTP_HOST}/download/#standard-modules [R=301,NE]
 
+# Downloads
+RewriteRule ^rpm.html$ https://%{HTTP_HOST}/download/#installing [R=301,NE]
+RewriteRule ^deb.html$ https://%{HTTP_HOST}/download/#installing [R=301,NE]
+RewriteRule ^tgz.html$ https://%{HTTP_HOST}/download/#freebsd-and-any-other-linux-installation-from-source [R=301,NE]
+RewriteRule ^solaris.html$ https://%{HTTP_HOST}/download/#solaris [R=301,NE]
+RewriteRule ^windows.html$ https://%{HTTP_HOST}/ [R=301]
+
 # Security
 RewriteRule ^security.html$ https://%{HTTP_HOST}/security/ [R=301]
 
