--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,5 +1,6 @@
 # Changelog should be displayed as archives
 RewriteRule ^changes.html$ https://%{HTTP_HOST}/changelog/ [R=301]
+RewriteRule ^uchanges.html$ https://%{HTTP_HOST}/changelog/ [R=301]
 RewriteRule ^changelog/$ archives/ [L]
 
 
@@ -57,10 +58,20 @@ RewriteRule ^faq.html$ https://%{HTTP_HOST}/faq/ [R=301]
 RewriteRule ^apache.html$ https://%{HTTP_HOST}/faq/#can-i-run-webmin-or-usermin-under-apache [R=301,NE]
 RewriteRule ^uapache.html$ https://%{HTTP_HOST}/faq/#can-i-run-webmin-or-usermin-under-apache [R=301,NE]
 RewriteRule ^updates.html$ https://%{HTTP_HOST}/download/ [R=301]
-RewriteRule ^uupdates.html$ https://%{HTTP_HOST}/download/ [R=301]
 
 # Partners
 RewriteRule ^partners.html$ https://%{HTTP_HOST}/supporters/ [R=301]
 
 # Translations
 RewriteRule ^trans.html$ https://%{HTTP_HOST}/community/#for-translators [R=301,NE]
+
+# Usermin
+RewriteRule ^udownload.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
+RewriteRule ^uwebmail.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
+RewriteRule ^uupdates.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
+RewriteRule ^uwebmail.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
+RewriteRule ^ustandard.html$ https://%{HTTP_HOST}/usermin/#standard-modules [R=301,NE]
+RewriteRule ^ubugs.html$ https://%{HTTP_HOST}/community/ [R=301]
+RewriteRule ^urpm.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
+RewriteRule ^udeb.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
+RewriteRule ^utgz.html$ https://%{HTTP_HOST}/usermin/#freebsd-and-any-other-linux-installation-from-source [R=301,NE]
