Fix up redirects

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -93,7 +93,7 @@ RewriteRule ^mirrors.html$ https://%{HTTP_HOST}/mirrors/ [R=301]
 
 # Always redirect www to non-www
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 
 # Linked releases
 RewriteRule ^changes-1.515.html$ https://%{HTTP_HOST}/changelog/webmin-1.515-released [R=301,NE]
