Add separator for old redirects

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -107,6 +107,8 @@ RewriteRule ^changes-1.435.html$ https://%{HTTP_HOST}/changelog/webmin-1.435-rel
 RewriteRule ^changes-1.429.html$ https://%{HTTP_HOST}/changelog/webmin-1.429-released [R=301,NE]
 RewriteRule ^vchanges-3.74.gpl.html$ https://%{HTTP_HOST}/changelog/virtualmin-3.74-released [R=301,NE]
 
+# ---- old rules ----
+
 RedirectMatch ^/webmin/(.*) /$1
 RedirectMatch ^/mail$ https://webmail.webmin.com/
 RedirectMatch ^/mail/$ https://webmail.webmin.com/
