--- a/static/.htaccess
+++ b/static/.htaccess
@@ -107,6 +107,7 @@ RewriteRule ^cinstall-kvm.html$ https://%{HTTP_HOST}/cloudmin/#installation [R=3
 RewriteRule ^mirrors.html$ https://%{HTTP_HOST}/mirrors/ [R=301]
 
 # Linked releases
+RewriteRule ^oldnews.html$ https://%{HTTP_HOST}/tags/changelog/ [R=301,NE]
 RewriteRule ^changes-1.515.html$ https://%{HTTP_HOST}/changelog/webmin-1.515-released [R=301,NE]
 RewriteRule ^changes-1.499.html$ https://%{HTTP_HOST}/changelog/webmin-1.499-released [R=301,NE]
 RewriteRule ^changes-1.479.html$ https://%{HTTP_HOST}/changelog/webmin-1.479-released [R=301,NE]
