Fix redirect to Changelog page once more for stubborn SF

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -3,10 +3,10 @@ RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 
 # Changelog should be displayed as archives
+RewriteRule ^changelog/$ archives/ [L]
 RewriteRule ^changes.html$ https://%{HTTP_HOST}/changelog/ [R=301]
 RewriteRule ^uchanges.html$ https://%{HTTP_HOST}/tags/usermin-changelog/ [R=301]
 RewriteRule ^vchanges.html$ https://%{HTTP_HOST}/tags/virtualmin-changelog/ [R=301]
-RewriteRule ^changelog/$ https://%{HTTP_HOST}/archives/ [P,L]
 
 # About and intro
 RewriteRule ^intro.html$ https://%{HTTP_HOST}/about/ [R=301]
