Fix to update number of users (assume all time average)

--- a/config.yml
+++ b/config.yml
@@ -70,8 +70,8 @@ params:
     Title: "What is Webmin?"
     content: >
         Webmin is a web-based system administration tool for Unix-like servers, 
-        and services with over 1,000,000 installations worldwide. Using it, it is 
-        possible to configure operating system internals, such as users, disk
+        and services with about 1,000,000 yearly installations worldwide. Using it,
+        it is possible to configure operating system internals, such as users, disk
         quotas, services or configuration files, as well as modify, and control
         open-source apps, such as **BIND** DNS Server, **Apache** HTTP Server, 
         **PHP**, **MySQL**, and many more.
