Fix Downloads pages

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -49,8 +49,8 @@ RewriteRule ^standard.html$ https://%{HTTP_HOST}/download/#standard-modules [R=3
 
 # Downloads
 RewriteRule ^download.html$ https://%{HTTP_HOST}/download/ [R=301]
-RewriteRule ^rpm.html$ https://%{HTTP_HOST}/download/#installing [R=301,NE]
-RewriteRule ^deb.html$ https://%{HTTP_HOST}/download/#installing [R=301,NE]
+RewriteRule ^rpm.html$ https://%{HTTP_HOST}/download/#setup [R=301,NE]
+RewriteRule ^deb.html$ https://%{HTTP_HOST}/download/#setup [R=301,NE]
 RewriteRule ^tgz.html$ https://%{HTTP_HOST}/download/#freebsd-and-any-other-linux-installation-from-source [R=301,NE]
 RewriteRule ^osx.html$ https://%{HTTP_HOST}/download/#freebsd-and-any-other-linux-installation-from-source [R=301,NE]
 RewriteRule ^solaris.html$ https://%{HTTP_HOST}/download/#solaris [R=301,NE]
@@ -95,14 +95,14 @@ RewriteRule ^docs.html$ https://%{HTTP_HOST}/docs/ [R=301]
 RewriteRule ^index7.html$ https://%{HTTP_HOST}/docs/ [R=301]
 
 # Usermin
-RewriteRule ^udownload.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
-RewriteRule ^uwebmail.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
-RewriteRule ^uupdates.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
-RewriteRule ^uwebmail.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
+RewriteRule ^udownload.html$ https://%{HTTP_HOST}/usermin/#setup [R=301,NE]
+RewriteRule ^uwebmail.html$ https://%{HTTP_HOST}/usermin/#setup [R=301,NE]
+RewriteRule ^uupdates.html$ https://%{HTTP_HOST}/usermin/#setup [R=301,NE]
+RewriteRule ^uwebmail.html$ https://%{HTTP_HOST}/usermin/#setup [R=301,NE]
 RewriteRule ^ustandard.html$ https://%{HTTP_HOST}/usermin/#standard-modules [R=301,NE]
 RewriteRule ^ubugs.html$ https://%{HTTP_HOST}/community/ [R=301]
-RewriteRule ^urpm.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
-RewriteRule ^udeb.html$ https://%{HTTP_HOST}/usermin/#downloading [R=301,NE]
+RewriteRule ^urpm.html$ https://%{HTTP_HOST}/usermin/#setup [R=301,NE]
+RewriteRule ^udeb.html$ https://%{HTTP_HOST}/usermin/#setup [R=301,NE]
 RewriteRule ^utgz.html$ https://%{HTTP_HOST}/usermin/#freebsd-and-any-other-linux-installation-from-source [R=301,NE]
 RewriteRule ^uintro.html$ https://%{HTTP_HOST}/usermin/ [R=301]
 RewriteRule ^index6.html$ https://%{HTTP_HOST}/usermin/ [R=301]
