--- a/static/.htaccess
+++ b/static/.htaccess
@@ -136,34 +136,34 @@ RedirectMatch ^/mail$ https://webmail.webmin.com/
 RedirectMatch ^/mail/$ https://webmail.webmin.com/
 
 # Webmin redirects
-Redirect /download/webmin-2.013.tar.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.013.tar.gz
-Redirect /download/webmin-2.013-minimal.tar.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.013-minimal.tar.gz
-Redirect /download/rpm/webmin-2.013-1.noarch.rpm https://prdownloads.sourceforge.net/webadmin/webmin-2.013-1.noarch.rpm
-Redirect /download/rpm/webmin-2.013-1.src.rpm https://prdownloads.sourceforge.net/webadmin/webmin-2.013-1.src.rpm
-Redirect /download/solaris-pkg/webmin-2.013.pkg.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.013.pkg.gz
-Redirect /download/solaris-pkg/webmin-2.013.zip https://prdownloads.sourceforge.net/webadmin/webmin-2.013.zip
-Redirect /download/deb/webmin_2.013_all.deb https://prdownloads.sourceforge.net/webadmin/webmin_2.013_all.deb
+Redirect /download/webmin-2.103.tar.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.103.tar.gz
+Redirect /download/webmin-2.103-minimal.tar.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.103-minimal.tar.gz
+Redirect /download/rpm/webmin-2.103-1.noarch.rpm https://prdownloads.sourceforge.net/webadmin/webmin-2.103-1.noarch.rpm
+Redirect /download/rpm/webmin-2.103-1.src.rpm https://prdownloads.sourceforge.net/webadmin/webmin-2.103-1.src.rpm
+Redirect /download/solaris-pkg/webmin-2.103.pkg.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.103.pkg.gz
+Redirect /download/solaris-pkg/webmin-2.103.zip https://prdownloads.sourceforge.net/webadmin/webmin-2.103.zip
+Redirect /download/deb/webmin_2.103_all.deb https://prdownloads.sourceforge.net/webadmin/webmin_2.103_all.deb
 
 # Webmin current redirects
-Redirect /download/webmin-current.tar.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.013.tar.gz
-Redirect /download/webmin-current-minimal.tar.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.013-minimal.tar.gz
-Redirect /download/rpm/webmin-current.rpm https://prdownloads.sourceforge.net/webadmin/webmin-2.013-1.noarch.rpm
-Redirect /download/rpm/webmin-current.src.rpm https://prdownloads.sourceforge.net/webadmin/webmin-2.013-1.src.rpm
-Redirect /download/solaris-pkg/webmin-current.pkg.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.013.pkg.gz
-Redirect /download/solaris-pkg/webmin-current.zip https://prdownloads.sourceforge.net/webadmin/webmin-2.013.zip
-Redirect /download/deb/webmin-current.deb https://prdownloads.sourceforge.net/webadmin/webmin_2.013_all.deb
+Redirect /download/webmin-current.tar.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.103.tar.gz
+Redirect /download/webmin-current-minimal.tar.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.103-minimal.tar.gz
+Redirect /download/rpm/webmin-current.rpm https://prdownloads.sourceforge.net/webadmin/webmin-2.103-1.noarch.rpm
+Redirect /download/rpm/webmin-current.src.rpm https://prdownloads.sourceforge.net/webadmin/webmin-2.103-1.src.rpm
+Redirect /download/solaris-pkg/webmin-current.pkg.gz https://prdownloads.sourceforge.net/webadmin/webmin-2.103.pkg.gz
+Redirect /download/solaris-pkg/webmin-current.zip https://prdownloads.sourceforge.net/webadmin/webmin-2.103.zip
+Redirect /download/deb/webmin-current.deb https://prdownloads.sourceforge.net/webadmin/webmin_2.103_all.deb
 
 # Usermin redirects
-Redirect /download/usermin-1.861.tar.gz https://prdownloads.sourceforge.net/webadmin/usermin-1.861.tar.gz
-Redirect /download/rpm/usermin-1.861-1.noarch.rpm https://prdownloads.sourceforge.net/webadmin/usermin-1.861-1.noarch.rpm
-Redirect /download/rpm/usermin-1.861-1.src.rpm https://prdownloads.sourceforge.net/webadmin/usermin-1.861-1.src.rpm
-Redirect /download/deb/usermin_1.861_all.deb https://prdownloads.sourceforge.net/webadmin/usermin_1.861_all.deb
+Redirect /download/usermin-2.003.tar.gz https://prdownloads.sourceforge.net/webadmin/usermin-2.003.tar.gz
+Redirect /download/rpm/usermin-2.003-1.noarch.rpm https://prdownloads.sourceforge.net/webadmin/usermin-2.003-1.noarch.rpm
+Redirect /download/rpm/usermin-2.003-1.src.rpm https://prdownloads.sourceforge.net/webadmin/usermin-2.003-1.src.rpm
+Redirect /download/deb/usermin_2.003_all.deb https://prdownloads.sourceforge.net/webadmin/usermin_2.003_all.deb
 
 # Usermin current redirects
-Redirect /download/usermin-current.tar.gz https://prdownloads.sourceforge.net/webadmin/usermin-1.861.tar.gz
-Redirect /download/rpm/usermin-current.rpm https://prdownloads.sourceforge.net/webadmin/usermin-1.861-1.noarch.rpm
-Redirect /download/rpm/usermin-current.src.rpm https://prdownloads.sourceforge.net/webadmin/usermin-1.861-1.src.rpm
-Redirect /download/deb/usermin-current.deb https://prdownloads.sourceforge.net/webadmin/usermin_1.861_all.deb
+Redirect /download/usermin-current.tar.gz https://prdownloads.sourceforge.net/webadmin/usermin-2.003.tar.gz
+Redirect /download/rpm/usermin-current.rpm https://prdownloads.sourceforge.net/webadmin/usermin-2.003-1.noarch.rpm
+Redirect /download/rpm/usermin-current.src.rpm https://prdownloads.sourceforge.net/webadmin/usermin-2.003-1.src.rpm
+Redirect /download/deb/usermin-current.deb https://prdownloads.sourceforge.net/webadmin/usermin_2.003_all.deb
 
 # Send updates to download.webmin.com
 RedirectMatch /updates/(.*gz.*) "https://download.webmin.com/updates/$1"
@@ -176,3 +176,7 @@ RedirectMatch /uupdates/(uupdates.txt.*) "https://download.webmin.com/uupdates/$
 # Redirect links to old modules docs
 RedirectMatch /modules-funcs.html http://doxfer.webmin.com/Webmin/TheWebminAPI
 RedirectMatch /modules-.*.html http://doxfer.webmin.com/Webmin/ModuleDevelopment
+
+# Block clickjacking
+Header set X-Frame-Options "SAMEORIGIN"
+
