--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ module:
   mounts:
   - source: layouts
     target: layouts
-  - source: ../webmin.com/layouts/docs/list.html
+  - source: layouts/docs/list.html
     target: layouts/docs/single.html
 
 canonifyURLs: true
